adding conflicting changes to simple.html

--- a/simple.html
+++ b/simple.html
@@ -20,7 +20,7 @@ adnlnlnadln
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Company 2014</p>
+		<p>&copy; aserehey not training 2014</p>
 	</footer>
 </body>
 </html>
