adding arnisi tis zwis in simple.html

--- a/simple.html
+++ b/simple.html
@@ -17,7 +17,8 @@ aojjepcnpep
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content
+			barethika tin zwi mou
+		
 		</p>
 	</main>
 	<footer class="container">
