adding changes after rebasing conflict

--- a/simple.html
+++ b/simple.html
@@ -2,6 +2,7 @@
 
 adnlnlnadln
 aojjepcnpep
+jopjpojpojpojaopsdjpj
 <head>
 	<title>An example website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
